--- a/Lesson09/css/medium.css
+++ b/Lesson09/css/medium.css
@@ -229,7 +229,7 @@ footer {
 .soap-box article:nth-child(even) img {
     grid-column: 1/3;
     width: 350px;
-    color: #77aeb1;
+    color: #365355;
     background-color: white;
     padding-bottom: 10px;
 }
@@ -239,7 +239,7 @@ footer {
     grid-row: 1;
     width: 250px;
     height: 250px;
-    color: #77aeb1;
+    color: #365355;
     background-color: white;
     padding-top: 10px;
 }
