--- a/Lesson10/css/home.css
+++ b/Lesson10/css/home.css
@@ -192,6 +192,48 @@ main figure.heroimage img {
     margin-top: 15px;
 }
 
+
+section {
+    width: 250px;
+    height: 375px;
+    background-color: #f3f88e;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+h2 {
+    color: white;
+    text-align: center;
+
+}
+
+p {
+    color: #ef6429;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: .65em;
+    text-align: center;
+}
+
+img {
+    width: 100px;
+    max-height: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    box-shadow: 2px 2px 4px #0E0E52;
+}
+
+.cards {
+    background-color: #b2cecb;
+    width: 100%;
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
 .grid {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     display: grid;
