--- a/Lesson10/css/home.css
+++ b/Lesson10/css/home.css
@@ -10,6 +10,10 @@
     border: 2px solid #f3f5ce;
 }
 
+.hide {
+    display: none;
+}
+
 header {
     color: #54665A;
     width: auto;
@@ -105,8 +109,6 @@ nav, footer{
     background-color: #475e4e;
 }
 
-
-
 .responsive li {
 	display: block;
 }
@@ -118,6 +120,7 @@ h1 {
     color: #475e4e;
     margin-bottom: 0px;
 }
+
 .heroimage {
     display: block;
     margin-top: 5px;
@@ -157,6 +160,7 @@ main figure.heroimage img {
     height: 0;
     border-top: 2px solid #475e4e;
     padding-top: 0;
+    text-align: center;
 }
 
 .weatherBox {
@@ -182,48 +186,6 @@ main figure.heroimage img {
 }
 
 .fivedaydrop {
-    text-align: center;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    color: #475e4e;
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-top: 15px;
-}
-
-
-section {
-    width: 250px;
-    height: 375px;
-    background-color: #f3f88e;
-    margin-top: 10px;
-    margin-bottom: 5px;
-}
-
-h2 {
-    color: white;
-    text-align: center;
-
-}
-
-p {
-    color: #ef6429;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: .65em;
-    text-align: center;
-}
-
-img {
-    width: 100px;
-    max-height: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    box-shadow: 2px 2px 4px #0E0E52;
-}
-
-.cards {
-    background-color: #b2cecb;
     width: 100%;
     max-width: 1100px;
     margin-left: auto;
@@ -232,28 +194,30 @@ img {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    color: #475e4e;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: center;
 }
 
-.grid {
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-items: center;
-    margin-right: 10px;
-    margin-left: 10px;
+.herobox h2 {
+    color: #285c27;
+    text-align: center;
+
 }
 
 .r1 {
-    grid-row: 1;
-    grid-column: 1/6;
     font-family:  'Playfair+Display', Times, serif;
     font-size: 2em;
     color:#ef6429;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    text-align: center;
 }
 
-.row2 {
+.forday {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 1.5em;
     background-color:#F1F5A9;
     color: #475e4e;
@@ -261,42 +225,15 @@ img {
     padding-top: 10px;
     padding-bottom: 10px;
     margin-bottom: 10px;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
-.r2c1 {
-    grid-column: 1;
-    grid-row: 2;
-  
-}
-
-
-.row3 {
+.foreicon {
     display: none;
 }
 
-.r2c2 {
-    grid-column: 2;
-    grid-row: 2;
-}
-
-.r2c3 {
-    grid-column: 3;
-    grid-row: 2;
-}
-
-.r2c4 {
-    grid-column: 1;
-    grid-row: 3;
-}
-
-.r2c5 {
-    grid-column: 2;
-    grid-row: 3;
-}
-
-.row4 {
+.hilo {
     display: flex;
     justify-content: center;
     color:rgb(26, 109, 109);
