--- a/Lesson10/css/home.css
+++ b/Lesson10/css/home.css
@@ -163,11 +163,12 @@ main figure.heroimage img {
     text-align: center;
 }
 
-.weatherBox {
+.weather-box {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    font-size: 1.25em;
     padding-bottom: .5em;
     padding-left: 6em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .left {
@@ -177,7 +178,6 @@ main figure.heroimage img {
 .right {
     text-align: right; 
 }
-
 
 
 .weatherimage {
