--- a/Lesson10/css/home.css
+++ b/Lesson10/css/home.css
@@ -359,6 +359,10 @@ footer {
     padding-bottom: 5px;
     margin-top: 0px;
 }
+
+.second-row-preston {
+    padding-left: 80px;
+}
     
 .BYUI2 {
     color: #0e165c;
