--- a/Lesson11/css/weathersite.css
+++ b/Lesson11/css/weathersite.css
@@ -533,18 +533,18 @@ form {
     padding-left: 2em;
     box-shadow: 2px 2px 4px #475e4e;
 }
-.contact {
+.contact-storm {
     background-color:rgb(32, 73, 73);
     color: #d2eca3;
     padding-top: 1.5em;
     line-height: 2em;
-    padding-bottom: 2.5em;
+    padding-bottom: 2.75em;
 }
 
 .storm {
     background-color:#d2eca3;
     color: rgb(32, 73, 73);
-    padding-top: .5em;
+    padding-top: .75em;
     padding-bottom: 1em;
 }
 
