--- a/Lesson11/css/weathersite.css
+++ b/Lesson11/css/weathersite.css
@@ -134,6 +134,19 @@ main figure.heroimage img {
     width: 100%;
 }
 
+.fishy-heroimage {
+    display: block;
+    margin-top: 5px;
+}
+
+main figure.fishy-heroimage {
+    width: 90%;
+}
+
+main figure.fishy-heroimage img {
+    width: 100%;
+}
+
 .hero-box {
     width: 100%;
     height: auto;
@@ -160,13 +173,36 @@ main figure.heroimage img {
     color:white;
     opacity: 100%;
 }
-.weather, .ss-weather{
+
+.fishy-hero-box {
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 0;
+    background-color:#a2ccb1ea;
+    color: #1e2f35;
+    opacity: 100%;
+}
+
+.weather, .ss-weather, .fishy-weather{
     font-size: 1.5em;
     padding-bottom: 0;
     text-align: center;
 }
 .ss-forecast-box {
     background-color: #f2f3d7;
+    max-width: 1125px;
+    display: block;
+    padding: 10px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.fishy-forecast-box {
+    background-color: #8dcea4;
     max-width: 1125px;
     display: block;
     padding: 10px;
@@ -188,6 +224,14 @@ main figure.heroimage img {
     border-top: 2px solid white;
     padding-top: 0;
     margin-left: 10px;
+}
+
+.fishy-hero-hr {
+    border: none;
+    height: 0;
+    border-top: 2px solid white;
+    padding-top: 0;
+    margin-left: 10px;
    
 }
 
@@ -200,6 +244,12 @@ main figure.heroimage img {
 }
 
 .ss-weather-box {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif; 
+    margin-left: auto;
+    margin-right: auto; 
+}
+
+.fishy-weather-box {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif; 
     margin-left: auto;
     margin-right: auto; 
@@ -255,6 +305,31 @@ main figure.heroimage img {
     margin-top:10px;
 }
 
+.fishy-fivedaydrop {
+    width: 100%;
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    color: #99d1f2;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: center;
+}
+
+.fishy-box {
+    border: 1px solid #FA8072;
+    padding: 5px;
+    margin-top:10px;
+}
+
+
 .herobox h2 {
     color: #285c27;
     text-align: center;
@@ -269,6 +344,13 @@ main figure.heroimage img {
 }
 
 .ss-r1 {
+    font-family:  'Playfair+Display', Times, serif;
+    font-size: 2em;
+    color:#5f8c8f;
+    text-align: center; 
+}
+
+.fishy-r1 {
     font-family:  'Playfair+Display', Times, serif;
     font-size: 2em;
     color:#5f8c8f;
@@ -301,6 +383,18 @@ main figure.heroimage img {
         padding-right: 30px;
 }
 
+.fishy-foreday {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: 1.5em;
+    color: white;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
 .hilo {
     display: flex;
     justify-content: center;
@@ -313,10 +407,22 @@ main figure.heroimage img {
     color:#ef6429;
 }
 
+
+.fishy-hilo {
+    display: flex;
+    justify-content: center;
+    color:#5f8c8f;
+}
 .ss-desc {
     display: flex;
     justify-content: center;
     color:#ef6429;
+}
+
+.fishy-desc {
+    display: flex;
+    justify-content: center;
+    color:#99d1f2;
 }
 
 .row5 {
@@ -338,6 +444,18 @@ main figure.heroimage img {
     margin-right: auto;
     background-color:#175053;
     color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+}
+
+.fishy-article {
+    display: block;
+    width: 1100px;
+    margin-left:auto;
+    margin-right: auto;
+    background-color:#99d1f2;
+    color: #175053;
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 20px;
@@ -401,7 +519,14 @@ main .ss-article .ss-article-content {
     margin-right: .2em;
 }
 
-.contact {
+.fishy-footer1 {
+    background-color: #175053;
+    color: white;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+.contact, .contact-fishy {
     display: block;
     width: 100%;
     margin: 10px;
@@ -409,6 +534,13 @@ main .ss-article .ss-article-content {
 }
 
 .contact-title {
+    color:#eff1c6fa;
+    font-family: 'Playfair+Display', Times, serif;
+    font-size: 1.8em;
+    text-align: center;
+}
+
+.contact-title-fishy {
     color:#eff1c6fa;
     font-family: 'Playfair+Display', Times, serif;
     font-size: 1.8em;
@@ -424,7 +556,11 @@ main .ss-article .ss-article-content {
 }
 
 .contact-info a{
-    color:rgb(10, 51, 51)    
+    color:rgb(10, 51, 51);  
+}
+
+.contact-info-fishy a{
+    color:rgb(226, 216, 216);   
 }
 
 .contact-address {
@@ -513,6 +649,22 @@ figcaption {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     color:rgb(26, 109, 109);
 }
+
+
+.pics:hover {
+    box-shadow: none;
+}
+
+.visit {
+    background-color: #eff1c6fa;
+    color:rgb(10, 51, 51);
+    font-family:  'Montserrat', Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 1.2em;
+    padding-bottom: 5px;
+    padding-top: 5px;
+}
+
 
 /* storm css */
 form {
