--- a/Lesson11/css/weathersite.css
+++ b/Lesson11/css/weathersite.css
@@ -494,6 +494,16 @@ main .ss-article .ss-article-title {
     padding-right: 20px;
 }
 
+main .fishy-article .fishy-article-title {
+    color:#eef8f8;
+    font-family: 'Playfair+Display', Times, serif;
+    font-size: 1.7em;
+    text-align: center;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 main .article .article-content {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     padding-top: 10px;
@@ -504,6 +514,16 @@ main .article .article-content {
 }
 
 main .ss-article .ss-article-content {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    line-height: 1.75;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    color:white;
+}
+
+main .fishy-article .fishy-article-content {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     line-height: 1.75;
     padding-top: 10px;
