--- a/Lesson11/css/large.css
+++ b/Lesson11/css/large.css
@@ -135,7 +135,7 @@
             padding-top: 30px;
         }
     
-        .footer1 {
+        .footer1, .fishy-footer1 {
             width: 80%;
             max-height: 300px;
             margin-bottom: 2px;
@@ -143,6 +143,7 @@
             margin-left: auto;
             display: grid;
             grid-template-columns: 1fr 1fr;
+            border: 10px solid white;
         }
     
         .contact-title {
