--- a/Lesson11/css/weathersite.css
+++ b/Lesson11/css/weathersite.css
@@ -301,7 +301,7 @@ main figure.fishy-heroimage img {
 }
 
 .ss-box {
-    border: 1px solid #FA8072;
+    border: 1px solid #862f09;
     padding: 5px;
     margin-top:10px;
 }
