--- a/Lesson11/css/weathersite.css
+++ b/Lesson11/css/weathersite.css
@@ -735,7 +735,7 @@ form {
 
 #submit {
     background-color: #f1f5a9;
-    color: #ef6429;
+    color: #ad471c;
     font-weight: bold;
     padding-right: 50px;
     padding-left: 50px;
