--- a/Lesson11/css/medium.css
+++ b/Lesson11/css/medium.css
@@ -205,9 +205,8 @@
     .soap-box article:nth-child(even) img {
         grid-column: 1/3;
         width: 350px;
-        color: #77aeb1;
+        color: #2d5052;
         background-color: white;
-        padding-bottom: 10px;
     }
 
     .soap-box article:nth-child(even) .data {
@@ -215,8 +214,7 @@
         grid-row: 1;
         width: 250px;
         height: 250px;
-        color: #77aeb1;
+        color: #2d5052;
         background-color: white;
-        padding-top: 10px;
     }
 }
