--- a/Lesson11/css/weathersite.css
+++ b/Lesson11/css/weathersite.css
@@ -829,3 +829,11 @@ form {
     background-color: #2d5052;
     color: white;
 }
+
+.white {
+    color: white;
+}
+
+.black {
+    color: black;
+}
