--- a/Lesson11/css/weathersite.css
+++ b/Lesson11/css/weathersite.css
@@ -116,11 +116,13 @@ nav, footer{
 h1 {
     font-family: 'Playfair+Display', Times, serif;
     font-size: 1.6em;
-    margin-left: 155px;
     color: #475e4e;
     margin-bottom: 0px;
 }
 
+.goPreston, .goSoda, .goFishing {
+    text-align: center;
+}
 .heroimage {
     display: block;
     margin-top: 5px;
@@ -781,8 +783,20 @@ form {
     color: #832f26;
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: .75em;
-    margin-left: 20px;
-    margin-right: 30px;
+    
+    display: block;
+}
+
+.sip {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.theDeets {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .soap-box {
