--- a/Lesson11/css/weathersite.css
+++ b/Lesson11/css/weathersite.css
@@ -18,9 +18,7 @@ header {
     color: #54665A;
     width: auto;
     height: 100%;
-    display: grid;
-    grid-template-columns: 25% 75%;
-    grid-template-rows: 1fr 1fr;
+    display: block;
     margin-top: 5px;
     margin-right: auto;
     margin-left: auto;
@@ -39,18 +37,15 @@ header .background-image {
     display: none;
 }
 
-.headerH1 {
+.headerH1{
     color: #f3520d;
     opacity: 85%;
     text-shadow:0 4px 5px #f3f88e;
     font-family: 'Playfair+Display', Times, serif;
     font-size: 1.6rem;
-    grid-column: 1/3;
-    grid-row: 1;
-    padding-top: 25px;
-    padding-left: 0;
+    padding-top: 5px;
     margin-bottom: 5px;
-    justify-self: center;
+    text-align: center;
 }
 
 .headerP {
@@ -58,12 +53,10 @@ header .background-image {
     text-shadow:0 5px 6px #f1f5a9;
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: .6rem;
-    grid-column: 2/4;
-    grid-row: 2;
-   padding-left: 20px;
     margin-top: 0;
-    justify-self: center;
+    text-align: center;
     padding-top: 0;
+    padding-bottom: 5px;
 
 }
 
@@ -434,6 +427,38 @@ main figure.fishy-heroimage img {
     display: flex;
     justify-content: center;
 }
+
+.divide, .so-divide {
+    display: block;
+}
+.events {
+   text-align: center;
+   color: white;
+   padding-bottom: 10px;
+   padding-top: 10px;
+   max-width: 850px;
+   margin-right: auto;
+   margin-left: auto;
+}
+
+.sodaevents {
+    background-color: #862f09;
+}
+
+.fishyevents {
+    background-color: #417275;
+    margin-top: 10px;
+}
+
+.prestonevents {
+    background-color: #F1F5A9;
+    color: #475e4e;
+}
+
+.go2fish ul, .go2preston ul, .go2soda ul {
+    list-style-type: none;
+}
+
 .article {
     display: block;
     width: 100%;
@@ -454,7 +479,7 @@ main figure.fishy-heroimage img {
 
 .fishy-article {
     display: block;
-    width: 1100px;
+    max-width: 800px;
     margin-left:auto;
     margin-right: auto;
     background-color:#99d1f2;
