--- a/Lesson11/css/large.css
+++ b/Lesson11/css/large.css
@@ -142,23 +142,62 @@
             grid-template-columns: 20% 80%;
             margin-left: auto;
             margin-right: -50px;
+            margin-top: 10px;
+        }
+
+        .so-da {
+            display: grid;
+            grid-template-columns: 20% 80%;
+            margin-top: 10px;
+        }
+
+        .pres-da {
+            display: grid;
+            grid-template-columns: 20% 80%;
+            margin-top: 10px;
+        }
+        
+        .prestonevents {
+            grid-column: 1;
+            margin-left: 25px;
+            margin-right: 25px;
+            padding-top: 35px;
         }
     
-        .events {
+        .sodaevents {
             grid-column: 1;
-            margin-top: 35px;
+            margin-top: 20px;
             margin-left: 50px;
+            padding-top: 20px;
         }
 
         .fishyevents {
             margin-top: 0;
+            grid-column: 1;
+            margin-left: 35px;
+            margin-right: 10px;
+            padding-right: 10px;
         }
     
-        .fishy-article, .ss-article {
+        .fishy-article {
             grid-column: 2;
             max-width: 800px;
             margin-left: 10px;
             margin-right: 0;
+        }
+
+        .preston-article {
+            grid-column: 2;
+            max-width: 800px;
+            margin-left: 10px;
+            margin-right: 0;
+        }
+        .ss-article {
+            grid-column: 2;
+            max-width: 800px;
+            margin-left: 10px;
+            margin-right: 0;
+            margin-top: 20px;
         }
     
         .article-title {
