--- a/lesson13/css/large.css
+++ b/lesson13/css/large.css
@@ -1,5 +1,51 @@
 @media screen and (min-width: 80em) {
 
+    .circle3, .circle4 {
+        justify-self: center;
+        margin-top: -50px;
+        margin-left: 125px;
+      }
+      
+      .whats-up-city {
+        position: fixed;
+        right: 0;
+        top: 50%;
+        width: 15em;
+        margin-top: -5em;
+        border-spacing: 5px;
+      }
 
+      .join-form {
+        margin-top: 60px;
+      }
+
+      .benefits-level {
+        margin-top: -30px;
+      }
+      .contact-box {
+        display: grid;
+        grid-template-columns: 60% 40%;
+        grid-gap: 10px;
+        padding: 20px;
+        margin-top: 20px;
+        
+      }
+      
+      .contact-center {
+        grid-row: 1;
+        grid-column: 1/3;
+      }
+      
+      .contact-left {
+        grid-row: 2;
+        grid-column: 1;
+        margin-left: 50px;
+      }
+    
+      .contact-right {
+        grid-row: 2;
+        grid-column: 2;
+        margin-left: 50px;
+      }
 
 }
