--- a/lesson13/css/medium.css
+++ b/lesson13/css/medium.css
@@ -88,4 +88,104 @@ h3 {
   margin-top: -125px;
 }
 
+.be-social {
+  padding-top: 125px;
+  height: 75px;
+  width: auto;
+}
+
+.be-social img {
+  width: 75px;
+  height: auto;
+}
+
+
+.love-it {
+  display: flex;
+  flex-wrap: wrap;
+  flex-flow: row;
+  align-items: center;
+  justify-content: center;
+  margin-right: 100px;
+}
+
+.i-love-to-see {
+  padding-left: 20px;
+}
+
+.sharks {
+  display: flex;
+  flex-wrap: wrap;
+  flex-flow: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  
+}
+
+.jaws {
+  padding-left: 20px;
+  text-align: right;
+}
+
+.circle {
+  width: 225px;
+  height: 175px;
+  padding-top: 50px;
+  font-size: 2.5em;
+}
+
+.circle3, .circle4 {
+  justify-self: end;
+  margin-top: -50px;
+}
+
+.history-photos {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  margin-right: 100px;
+}
+
+.photo1, .photo2, .photo3, .photo4 {
+  height: 300px;
+  width: auto;
+}
+
+.photo1 {
+  grid-column: 1;
+  grid-row: 1;
+  justify-self: end;
+}
+
+.photo2 {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.photo3 {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.photo4 {
+  grid-column: 1;
+  grid-row: 2;
+  justify-self: end;
+}
+
+.fancy {
+  padding-left: 50px;
+}
+
+.move-left {
+  margin-top: -25px;
+  margin-left: 75px;
+}
+
+.move-down {
+  margin-top: -5px;
+  margin-left: 290px;
+}
+
 }
