--- a/lesson13/css/draper.css
+++ b/lesson13/css/draper.css
@@ -651,16 +651,11 @@ main {
 }
 
 .rolodex {
-  width: 50%;
+  
   padding: 10px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-}
-
-.rolodex img {
-  width: 200px;
-  height: auto;
 }
 
 .rolodex h3 {
@@ -679,24 +674,28 @@ main {
   color: #304C79;
 }
 
-.business-card-restaurant {
+.restaurantinfo, .boutiqueinfo {
   background-color: #ffffff;
   color: #304C79;
+  border: 2px solid #304C79;
+  margin: 5px;
+  width: 500px;
+  height: auto;
 }
 
-.business-card-boutique {
-  background-color:#304C79;
-  color: #bfe7dd;
-}
-
-.business-card-restaurant div {
+.restaurantname, .boutiquename {
   color: #304C79;
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
-  font-size: 1em;
+  font-size: 1.5em;
+  padding: 10px;
+  position: relative;
 }
 
-.business-card-boutique div {
-  color: #bfe7dd;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
-  font-size: 1em;
+.restaurantlogo, .boutiquelogo {
+  max-width: 125px;
+  max-height: 100px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px;
 }
